# mshm

./: .gitignore  CMakeLists.txt  component.yaml
cmake/: mshmConfig.cmake.in
include/shm/: shm_adapter.h  shm_api.h  shm_errors.h  shm_types.h
src/: CMakeLists.txt  shm_common.c  shm_linux.c  shm_qnx.c
test/: CMakeLists.txt  client_test.c  multi_client_test.c  server_test.c  unit_test.c
